# CF_Programming

./: .gitignore  .mcp.json  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
data/: availability.overrides.dated.example.json  availability.overrides.example.json  availability.template.json  classplan.fixture.json  focus_blocks.fixture.json  plate_inventory.json
docs/runbooks/: chat-project-operator-checklist.md  chat-project-setup.md
docs/superpowers/plans/: 2026-06-24-crossfit-coach-chat-project.md  2026-06-24-crossfit-coach-planner-integration.md  2026-06-24-crossfit-coach-supabase-foundation.md
docs/superpowers/specs/: 2026-06-24-crossfit-coach-plugin-design.md
examples/: daily_adjust_examples.md  weekly_plan_2026-06-08.md
references/: README.md  knee-rehab.md  ring-mu-kipping.md
skills/crossfit-coach/: SKILL.md
skills/programming-policy/: SKILL.md
src/cfprog/: __init__.py  analytics.py  availability.py  availcli.py  calculator.py  classplan.py  cli.py  focus.py  generator.py  logcli.py  logstore.py  maxes.py  plates.py  references.py  render.py  targets.py  weekcli.py
supabase/: config.toml
supabase/migrations/: 0001_core_tables.sql  0002_current_maxes.sql  0003_e1rm.sql  0004_focus_plans.sql  0005_analytics_views.sql  0006_scoped_role.sql  0007_focus_updated_at.sql  0008_focus_status.sql  0009_neglected_lifts.sql  0010_authenticator_membership.sql
supabase/seed/: seed_from_fixture.py
tests/: test_analytics.py  test_availability.py  test_generator.py  test_logstore.py  test_references.py  test_targets.py
(+35 files in other folders)
